     - fixed wrong content length in conjunction with wide UTF-8 characters bug     
     - added missing redirect after direct redirected folder call
     - added profile tab to GPXViewer extension
     - added cookies hook for web interface extensions
     - added new settings hooks for settings dialog
     - added Feedback extension
     - added SaveSettings extension
     - disabled CalDAV, CalDAV Schedule, CardDAV, GroupDAV, ACL, BIND, SEARCH support by default
     - improved Diff extension dialog layout
     - improved performance
     - made a lot of code more "Perl Best Practices" compliant
     - refactored Perl code for request handling, web interface
     - reformatted Perl code with tidy
     - fixed memory leaks
     
1.1.0: 2015/9/9
     - fixed wrong date format in getlastmodified property using mod_perl/Speedy CGI bug
     - fixed multiple white-spaces in file/folder names bug
     - fixed Chrome related rename, create file/folder bug
     - fixed some DBB backend bugs (thx Varadi Gabor)
     - fixed some AFS backend bugs (thx Varadi Gabor)
     - fixed missing filename in SourceCodeViewer plugin bug
     - added Hungarian translations (thx Varadi Gabor)
     - added missing icons to dialogs
     - added ImageInfo extension
     - added Amazon S3 browser backend S3B (only tested with Ceph Rados gateway) 
     - added QuickToggle extension
     - added VideoJS extension
     - added statusbar
     
1.0.0: 2014/10/10
     - fixed minor AFS Group Manager bug
     - fixed a lot of bugs: fusedav doesn't work, ...
     - added SHOWDOTFILES and SHOWDOTFOLDERS feature
     - added the GIT backend
     - added disk usage web interface extension 'DiskUsage'
     - added POSIX ACL web interface extension 'PosixAclManager'
     - added web interface extension 'Download' 
     - added web interface extension 'SendByMail'
     - added web interface extension 'Diff'
     - added web interface extension 'Zip' 
     - added web interface extension 'AFSGroupManager'